fix(Mails): add winback 7

--- a/packages/backend-modules/mail/templates/membership_owner_prolong_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_notice_0.html
@@ -72,14 +72,15 @@
                       </tr>
                     </table>
                     <p>
-                      Ihr Einsatz macht einen Unterschied, denn die Republik finanziert sich über ihre Leserinnen und Leser: Es kommt also wirklich auf jede einzelne Person an. 
+                      Ihr Einsatz wirkt, denn die Republik finanziert sich über ihre Leserinnen und Leser: Es kommt also wirklich auf jede einzelne Person an. 
                     </p>
 
                     <p>
                       Gemeinsam machen wir einen Unterschied.
                     </p>
                     <p>Ihre Crew der Republik</p>
-                    <p>PS: Sie haben Ihre Mitgliedschaft bereits erneuert? Dann muss uns ein Fehler unterlaufen sein. Schreiben Sie uns an kontakt@republik.ch und wir gehen dem Problem auf die Spur.
+                    <p>PS: Sie haben Ihre Mitgliedschaft bereits erneuert? Dann muss uns ein Fehler unterlaufen sein. Schreiben Sie uns an 
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a> und wir gehen dem Problem auf die Spur.
                     </p>
                   </td>
                 </tr>
