fix(mail): more mail fixes

--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
@@ -109,10 +109,9 @@
                     </p>
                     <p>
                       PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
-                      begründeten finanziellen Engpass haben sollten, können Sie Ihren Mitgliedschaftsbeitrag 
-                      selbst bestimmen. <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
+                      begründeten finanziellen Engpass haben sollten, können Sie <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
                     </p>
-                    <p>PPS: Halt, stopp, Sie haben Ihre Mitgliedschaft bereits bezahlt? Dann muss 
+                    <p>PPS: Halt, stopp, Sie haben bereits eine neue Mitgliedschaft oder ein Abo gelöst? Dann muss 
                       uns ein Fehler unterlaufen sein. Nehmen Sie bitte so schnell wie möglich 
                       Kontakt mit uns auf: <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.
                     </p>
