--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_uncancelled.html
@@ -107,8 +107,7 @@
                     </p>
                     <p>
                       PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
-                      begründeten finanziellen Engpass haben sollten, können Sie Ihren Mitgliedschaftsbeitrag 
-                      selbst bestimmen. <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
+                      begründeten finanziellen Engpass haben sollten, können Sie <a href="{{prolong_url}}">Ihren Mitgliedschaftsbeitrag selbst bestimmen</a>.
                     </p>
                     <p>PPS: Halt, stopp, Sie haben Ihre Mitgliedschaft bereits bezahlt? Dann muss 
                       uns ein Fehler unterlaufen sein. Nehmen Sie bitte so schnell wie möglich 
