--- a/packages/backend-modules/mail/templates/membership_owner_prolong_abo_give_months_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_abo_give_months_notice_0.html
@@ -49,7 +49,7 @@
                     <p>
                       <a href="{{prolong_url}}"
                         >Jetzt an Bord bleiben!</a
-                      >.
+                      >
                     </p>
                     <p>
                       Wir schreiben Ihnen so direkt, weil Ihr Beitrag für unsere 
@@ -104,11 +104,11 @@
                     <p>
                       PS: Journalismus kostet zwar, doch wir wollen niemanden ausschliessen. Wenn Sie einen 
                       begründeten finanziellen Engpass haben sollten, dann melden Sie sich bei uns: 
-                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a> Wir finden eine Lösung.
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>. Wir finden eine Lösung.
                     </p>
                     <p>PPS: Falls Sie sich bewusst gegen das Bleiben entschieden haben, dann haben 
-                      wir eine letzte Bitte: Nennen Sie uns zum Abschied Ihre Gründe? Sie kennen uns 
-                      mittlerweile so gut, dass Ihnen womöglich etwas aufgefallen ist, was wir übersehen haben.
+                      wir eine letzte Bitte: <a href="https://www.republik.ch/angebote?goto=account">Nennen Sie uns zum Abschied Ihre Gründe</a>? 
+                      Sie kennen uns mittlerweile so gut, dass Ihnen womöglich etwas aufgefallen ist, was wir übersehen haben.
                     </p>
                   </td>
                 </tr>
