fix(Mail): name fix

--- a/packages/backend-modules/mail/templates/membership_giver_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/membership_giver_prolong_notice.html
@@ -41,7 +41,7 @@
               <tbody>
                 <tr>
                   <td style="padding: 20px">
-                    <p>Guten Tag, {name}</p>
+                    <p>Guten Tag, {{name}}</p>
                     <p>
                       Vor knapp einem Jahr haben Sie eine Eigenschaft an den Tag gelegt, von der viele Menschen nur 
                       träumen können: Grosszügigkeit. 
