fix(Mail): more name fixes

--- a/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
+++ b/packages/backend-modules/mail/templates/membership_deactivated_abo_give_months_uncancelled.html
@@ -65,7 +65,7 @@
                     </table>
                     <br />
                     <hr />
-                    <p>Guten Tag, {name}</p>
+                    <p>Guten Tag, {{name}}</p>
                     <p>
                       Aus, finito, das wars. Ihr Abonnement wurde deaktiviert.
                     </p>
